Added usung statements for future reference

--- a/_posts/2020-04-16-.NET-Core-logging-urls-during-starting-of-the-web-application.md
+++ b/_posts/2020-04-16-.NET-Core-logging-urls-during-starting-of-the-web-application.md
@@ -18,6 +18,10 @@ Key part is of course in the call to the ServerFeatures: `host.ServerFeatures.Ge
 ## Full code example
 
 ```c#
+using Microsoft.AspNetCore;
+using Microsoft.AspNetCore.Hosting;
+using Microsoft.AspNetCore.Hosting.Server.Features;
+
 public static void Main(string[] args)
 {
     Log.Logger = new LoggerConfiguration()
