Added .net core version to be complete. 3.1 works differently

--- a/_posts/2020-04-16-.NET-Core-logging-urls-during-starting-of-the-web-application.md
+++ b/_posts/2020-04-16-.NET-Core-logging-urls-during-starting-of-the-web-application.md
@@ -16,6 +16,7 @@ Below is the full setup we started using. We are using [Serilog](https://serilog
 Key part is of course in the call to the ServerFeatures: `host.ServerFeatures.Get<IServerAddressesFeature>();`
 
 ## Full code example
+Note: this code was tested with .NET Core 2.2.
 
 ```c#
 using Microsoft.AspNetCore;
